fix alignment of registration wizard progress buttons

--- a/app/assets/stylesheets/new_styles/02_buttons.scss
+++ b/app/assets/stylesheets/new_styles/02_buttons.scss
@@ -250,8 +250,6 @@
 
 .registration_button {
   @include button; //(220px);
-  margin-bottom:10px;
-  text-align:center;
 }
 
 .registration_button:hover, .registration_button:focus {
